kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opengym
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: opengym
